# spelling-correction

./: .gitignore  Dockerfile  Dockerfile.old  README.md  pyproject.toml
configs/: data_sources.yaml  en_transformer_byte_bpe.yaml  multi_moe_transformer_byte_bpe.yaml  multi_transformer_bpe_bpe.yaml  multi_transformer_byte_bpe.yaml  transformer_byte_bpe.yaml
configs/losses/: ce.yaml
configs/models/: byte_transformer.yaml  transformer.yaml
configs/postprocessings/: masking.yaml
configs/preprocessings/: clean_and_normalize.yaml  clean_normalize.yaml  clean_normalize_substring.yaml  de_text_corruption.yaml  en_text_corruption.yaml  es_text_corruption.yaml  fr_text_corruption.yaml  it_text_corruption.yaml  mask_corruption.yaml  pt_text_corruption.yaml  spelling_corruption.yaml  text_corruption.yaml  whitespace_corruption.yaml
configs/preprocessings/de/: spelling_corruption.yaml
configs/preprocessings/en/: spelling_corruption.yaml
configs/preprocessings/es/: spelling_corruption.yaml
configs/preprocessings/fr/: spelling_corruption.yaml
configs/preprocessings/it/: spelling_corruption.yaml
configs/preprocessings/mask/: char_mask_corruption.yaml  word_mask_corruption.yaml
configs/tokenizers/: bpe.yaml  bpe_multi.yaml  byte.yaml  byte_multi.yaml
scripts/: export_encoder_checkpoint.py  generate_misspellings.py  generate_visualizations.py  run_misspellings_server.py  run_training.sh  train.sh
src/spelling_correction/: __init__.py  model.py
src/spelling_correction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+7 files in other folders)
